Bugzilla Bug 89864 <SCRIPT LANGUAGE="JavaScript1.0"> gets ignored r=dveditz, sr=brendan, a=asa